--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
@@ -27,8 +28,8 @@
           <name>Slimjars Trove4j Repository</name>
           <url>https://mvn.slimjars.com</url>
         </repository>
-      </repositories>
-    
+    </repositories>
+
     <dependencies>
         <dependency>
           <groupId>com.sparkjava</groupId>
@@ -56,8 +57,10 @@
             <version>2.15.0</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
+          <!-- This plugin still sets your mainClass in the manifest -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
@@ -65,11 +68,37 @@
             <configuration>
               <archive>
                 <manifest>
-                  <mainClass>com.example.Main</mainClass>
+                  <mainClass>com.example.Main_costline_extractor</mainClass>
                 </manifest>
               </archive>
             </configuration>
           </plugin>
+
+          <!-- Maven Shade Plugin: bundles all dependencies into a single JAR -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.4.1</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals><goal>shade</goal></goals>
+                <configuration>
+                  <!-- Do not generate a “reduced” POM; keep your own POM unchanged -->
+                  <createDependencyReducedPom>false</createDependencyReducedPom>
+                  <!-- Place the resulting JAR under target/ with “-shaded” suffix -->
+                  <shadedArtifactAttached>true</shadedArtifactAttached>
+                  <shadedClassifierName>shaded</shadedClassifierName>
+                  <transformers>
+                    <!-- Make sure your Main class is in the manifest -->
+                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                      <mainClass>com.example.Main_costline_extractor</mainClass>
+                    </transformer>
+                  </transformers>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
-      </build>
+    </build>
 </project>
